Update essay preview styles and content
- Increased font sizes for improved readability in the essay preview.
- Enhanced line heights for better text flow.
- Replaced original text with placeholder content for the essay abstract and body paragraphs.
- Updated notes section with new placeholder items.
- Changed the book title in the aside section to reflect the new content.

--- a/public/preview-essay.html
+++ b/public/preview-essay.html
@@ -75,7 +75,7 @@
     body {
       margin: 0;
       font-family: var(--font-body);
-      font-size: 18px;
+      font-size: 20px;
       line-height: 1.6;
       color: var(--text);
       background: var(--bg);
@@ -230,8 +230,8 @@
     }
     .essay__body {
       font-family: var(--font-body);
-      font-size: 1.1rem;
-      line-height: 1.7;
+      font-size: 1.25rem;
+      line-height: 1.75;
     }
     .essay__body p {
       margin: 0 0 1.5em;
@@ -438,12 +438,16 @@
     <p class="essay__meta">2024 · Ensayo</p>
 
     <p class="essay__abstract">
-      Escribo desde la memoria, el cuerpo y el tiempo. Este ensayo explora la relación entre la experiencia corporal y la recuperación del pasado en la escritura.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
     </p>
 
     <div class="essay__body">
       <p>
-        La memoria no es un archivo. Es un cuerpo que recuerda. No se almacena en carpetas ni en índices; habita en el tacto, en el olfato, en el ritmo que el cuerpo repite sin saberlo.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
       </p>
 
       <figure class="essay__figure">
@@ -460,24 +464,29 @@
       </figure>
 
       <p>
-        Cuando escribo, no busco en el recuerdo como quien busca en un cajón. Escribo con el cuerpo que recuerda: la mano que traza, el pulso que empuja la frase, el espacio en blanco que precede a la palabra que aún no aparece.
+        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
       </p>
 
       <p>
-        El tiempo en la obra no es lineal. No avanza como una flecha. Se pliega, se condensa, se abre en capas. La memoria no es nostalgia; es una forma de presente.
+        Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
       </p>
     </div>
 
     <section class="essay__notes">
       <h3>Notas</h3>
       <ol>
-        <li>Primera versión leída en el taller de escritura, 2023.</li>
-        <li>Este ensayo forma parte del libro <em>El cuerpo que recuerda</em>, en preparación.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
       </ol>
     </section>
 
     <aside class="essay__book">
-      <p>Este ensayo pertenece a: <a href="#">El cuerpo que recuerda</a></p>
+      <p>Este ensayo pertenece a: <a href="#">Lorem Ipsum Liber</a></p>
       <p><a href="#">Abrir el libro</a></p>
     </aside>
 
