Refactor link styles for consistency and clarity
- Removed underline from links by default, enhancing visual clarity.
- Updated documentation to reflect changes in link hover behavior.
- Ensured consistency across styles in `index.html`, `preview-essay.html`, and `02-identidad-corporativa.md`.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     .poem-card__title { font-family: var(--font-heading); font-size: 1.25rem; margin: 0 0 0.5em; }
     .poem-card__excerpt { font-family: var(--font-body); margin: 0 0 1em; }
     a { color: var(--link); text-decoration: none; }
-    a:hover { color: var(--link-hover); text-decoration: underline; text-decoration-thickness: 2px; text-underline-offset: 0.18em; }
+    a:hover { color: var(--link-hover); }
     a:focus-visible { outline: 3px solid var(--focus); outline-offset: 3px; }
     .button, button.button { display: inline-block; font-family: var(--font-ui); font-size: 1rem; font-weight: 600; padding: 0.6em 1.2em; background: var(--primary); color: var(--text-on-primary); border: 2px solid var(--border); cursor: pointer; text-decoration: none; }
     button.button { font: inherit; }
