Add books section and update navigation links
- Introduced a new `preview-books.html` page for showcasing a catalog of works.
- Updated `index.html` and `preview-essay.html` to include navigation links to the new books section.
- Added placeholder content for the books section with a brief description and exploration link.
- Included a book cover placeholder image for visual representation.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
       <a href="index.html" class="site-header__brand">Daniel Arella</a>
       <nav class="site-header__nav" aria-label="Principal">
         <a href="index.html">Inicio</a>
-        <a id="nav-to-essay" href="public/preview-essay.html">Ensayo</a>
+        <a href="public/preview-essay.html">Ensayo</a>
+        <a href="public/preview-books.html">Libros</a>
       </nav>
     </div>
   </header>
@@ -219,6 +220,11 @@
           <h3 class="poem-card__title">Ensayo reciente</h3>
           <p class="poem-card__excerpt">La memoria y el cuerpo.</p>
           <a href="public/preview-essay.html">Leer</a>
+        </article>
+        <article class="poem-card">
+          <h3 class="poem-card__title">Libros</h3>
+          <p class="poem-card__excerpt">Catálogo de la obra.</p>
+          <a href="public/preview-books.html">Explorar</a>
         </article>
       </div>
     </section>
