--- a/public/preview-essay.html
+++ b/public/preview-essay.html
@@ -386,6 +386,8 @@
       <nav class="site-header__nav" aria-label="Principal">
         <a href="../index.html">Inicio</a>
         <a id="nav-to-palette" href="../index.html">Paleta</a>
+        <a href="preview-essay.html">Ensayo</a>
+        <a href="preview-books.html">Libros</a>
       </nav>
     </div>
   </header>
